--- a/src/poi_frontend/package.json
+++ b/src/poi_frontend/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "setup": "npm i && dfx canister create poi_backend && dfx generate poi_backend && dfx deploy",
     "start": "vite --port 3000",
-    "prebuild": "dfx generate",
     "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
@@ -14,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@dfinity/agent": "^3.0.0",
+    "@dfinity/auth-client": "^3.0.0",
     "@dfinity/candid": "^3.0.0",
     "@dfinity/principal": "^3.0.0"
   },
