Fix CSP for Twitter images, auto-load points, set leaderboard as default view
- Add CSP header to allow images from pbs.twimg.com
- Auto-load user points when identity becomes available
- Change default view from dashboard to leaderboard

--- a/src/poi_frontend/public/.ic-assets.json5
+++ b/src/poi_frontend/public/.ic-assets.json5
@@ -9,6 +9,10 @@
         // Options are: "hardened" | "standard" | "disabled".
         "security_policy": "standard",
 
+        "headers": {
+            "Content-Security-Policy": "img-src 'self' data: https://pbs.twimg.com;"
+        },
+
         // Uncomment to disable the warning about using the
         // standard security policy, if you understand the risk
         // "disable_security_policy_warning": true,
