Update CSP to allow all twimg.com subdomains
- Use wildcard pattern https://*.twimg.com for comprehensive Twitter image support
- Covers all Twitter image subdomains (pbs, abs, etc.)
- More future-proof and comprehensive than listing individual subdomains

--- a/src/poi_frontend/public/.ic-assets.json5
+++ b/src/poi_frontend/public/.ic-assets.json5
@@ -10,7 +10,7 @@
         "security_policy": "standard",
 
         "headers": {
-            "Content-Security-Policy": "img-src 'self' data: https://pbs.twimg.com https://abs.twimg.com;"
+            "Content-Security-Policy": "img-src 'self' data: https://*.twimg.com;"
         },
 
         // Uncomment to disable the warning about using the
