--- a/src/poi_frontend/package.json
+++ b/src/poi_frontend/package.json
@@ -15,7 +15,8 @@
     "@dfinity/candid": "^3.0.0",
     "@dfinity/principal": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
